gcc/testsuite/rust/rustc/ui/issues/issue-29124.rs
struct Ret;
struct Obj;

impl Obj {
    fn func() -> Ret {
        Ret
    }
}

fn func() -> Ret {
    Ret
}

fn main() {
    Obj::func.x();
// { dg-error ".E0599." "" { target *-*-* } .-1 }
    func.x();
// { dg-error ".E0599." "" { target *-*-* } .-1 }
}

